--- a/index.html
+++ b/index.html
@@ -16,26 +16,38 @@
 		<!-- Header -->
 			<header id="header">
 				<h1>Toff Twins BMR</h1>
-				<p>Ghanaian music duo Toff Twins reveals on their social media handles about a new Ep “Stay Up” coming up on June 30th with pre-save link available on June 20th. 
+				<p>Ghanaian music duo Toff Twins reveals on their social media handles about a new Album “The Royals State Of Mind” up from July 31st. 
 					<br> 
-					It’s a five song Ep with songs like: 
+					It’s a twelve song album with songs like: 
 					<br> 
-					So We Stay (intro), 
+					BRAVERY Toff Twins ft Subway & Tank DrRay Prod, 
 					<br> 
-					Over Dem, 
+					PRAYER BeatzDakay, 
 					<br> 
-					Young Rich, 
+					MEDAL DrRay Prod, 
 					<br> 
-					Presidential, 
+					MOOD BeatzDakay,
+					<br>
+					OVER DrRay Prod,
+					<br>
+					BIG SOUND BeatzDakay Prod,
+					<br>
+					GET UP ATown Prod,
+					<br>
+					STAYRICH Stay Real DrRay Prod,
+					<br>
+					CHAMPAGNE POPPING BeatzDakay Prod,
+					<br>
+					HIT AFTER HEAT BeatzDakay Prod,
+					<br>
+					BALANCE IT ATown Prod,
+					<br>
+					STEP UP BeatzDakay Prod
 					<br> 
-					Bad Man Road Ft Hilly with production credit going to the legendary Beatz Dakay.  <a href="https://distrokid.com/hyperfollow/tofftwins/stay-up">Pre-save here</a>.</p>
+					Bad Man Road Ft Hilly with production credit going to the legendary Beatz Dakay.  <a href="youtu.be/UhPaSbIMTJA?si=wGMvkjjkRfTi3uRL">Watch here</a>.</p>
 			</header>
 
-		<!-- Signup Form -->
-			<!-- <form id="signup-form" method="post" action="#">
-				<input type="email" name="email" id="email" placeholder="Email Address" />
-				<input type="submit" value="Sign Up" />
-			</form> -->
+		<
 
 		<!-- Footer -->
 			<footer id="footer">
@@ -45,7 +57,7 @@
 					<li><a href="https://web.facebook.com/profile.php?id=100093573990639" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; 2023 tofftwinsbmr.</li> <!-- <li>Credits: <a href="http://html5up.net">HTML5 UP</a></li> -->
+					<li>&copy; 2025 tofftwinsbmr.</li> <!-- <li>Credits: <a href="http://html5up.net">HTML5 UP</a></li> -->
 				</ul>
 			</footer>
 
